# spin_practice

./: Cargo.toml  spin.toml
src/: bindings.rs  lib.rs
wit/: world.wit
